another little change

--- a/styles/clock.css
+++ b/styles/clock.css
@@ -15,7 +15,7 @@ body{
     left:50%;
     transform: translate(-50%,-50%);
     color:#FFFF00;
-    font-family: Papyrus;
+    font-family: Orbitron;
     letter-spacing: 7px;
     font-weight: bold;
     font-size:10em;
@@ -27,7 +27,7 @@ body{
     left:50%;
     transform: translate(-50%,-50%);
     color:#FFFF00;
-    font-family: Papyrus;
+    font-family: Orbitron;
     letter-spacing: 7px;
     font-weight: bold;
     font-size:2em;
