--- a/styles/clock.css
+++ b/styles/clock.css
@@ -7,6 +7,8 @@ body{
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    height: auto;
+    max-width: 100%;
 }
 
 #clock{
@@ -33,4 +35,7 @@ body{
     font-size:2em;
 
   }
+
+  html, body {width: 100vw; height: 100vh;}
+div {width: 100%; height: 100%}
   
