--- a/styles/clock.css
+++ b/styles/clock.css
@@ -36,6 +36,24 @@ body{
 
   }
 
-  html, body {width: 100vw; height: 100vh;}
-div {width: 100%; height: 100%}
+  /* Responsive styling */
+@media only screen and (max-width: 500px){
+  #clock {font-size: 2em;}
+  #text {font-size: 1em;}
+}
   
+
+@media screen and (max-width: 768px) {
+  #clock {font-size: 2em;}
+  #text {font-size: 1em;}
+}
+
+@media screen and (max-width: 768px) {
+  #clock {font-size: 2em;}
+  #text {font-size: 1em;}
+}
+
+@media screen and (max-width: 375px) {
+  #clock {font-size: 2em;}
+  #text {font-size: 1em;}
+}
