--- a/styles/clock.css
+++ b/styles/clock.css
@@ -8,7 +8,7 @@ body{
     -o-background-size: cover;
     background-size: cover;
     height: auto;
-    max-width: 100%;
+    max-width: auto;
 }
 
 #clock{
