--- a/styles/style.css
+++ b/styles/style.css
@@ -5,20 +5,20 @@ text-align: center;
 font-family: Orbitron;
 letter-spacing: 5px;
 font-weight: bold;
-font-size:7em;
+font-size:5em;
 position: middle;
 }
 
 
   /* Responsive styling */
 @media only screen and (max-width: 500px){
-  #body {font-size: 1em;}
+  body {font-size: 3em;}
   }
   
 @media screen and (max-width: 768px) {
-  #body {font-size: 1em;}
+  body {font-size: 3em;}
   }
 
 @media screen and (max-width: 375px) {
-  #cb {font-size: 1em;}
+  body {font-size: 3em;}
 }
